--- a/backend/journals/utils/templates/accounts.html
+++ b/backend/journals/utils/templates/accounts.html
@@ -83,7 +83,7 @@
                     <td style="text-align: right;">{{ account.get('account_balance') }}</td>
                 </tr>
                 {% endfor %}
-                <tr style="font-weight: bold;text-decoration: underline;">
+                <tr  style="font-weight: bold; background-color: #d1d5db;">
                     <td colspan="5" style="text-align: right;" >Total</td>
                     <td style="text-align: right;">{{ data.get('totals').get('balance') }}</td>
                 </tr>
