--- a/backend/journals/utils/templates/purchases.html
+++ b/backend/journals/utils/templates/purchases.html
@@ -95,7 +95,7 @@
 
                 </tr>
                 {% endfor %}
-                <tr style="font-weight: bold; text-decoration: underline;">
+                <tr  style="font-weight: bold; background-color: #d1d5db;">
                     <td colspan="5" style="text-align: right;">Total</td>
                     <td style="text-align: right;">{{ data.get('totals').get('amount') }}</td>
                     <td style="text-align: right;">{{ data.get('totals').get('quantity') }}</td>
