--- a/backend/journals/utils/templates/service_income.html
+++ b/backend/journals/utils/templates/service_income.html
@@ -68,7 +68,7 @@
                     <th>Sales #</th>
                     <th>Date</th>
                     <th>Type</th>
-                    <th colspan="2">Items</th>
+                    <th colspan="2">Services</th>
                     <th>Total Amount ({{ organisation.currency }})</th>
                     <th>Total Quantity</th>
                     <th>Due Amount ({{ organisation.currency }})</th>
@@ -95,7 +95,7 @@
 
                 </tr>
                 {% endfor %}
-                <tr style="font-weight: bold; text-decoration: underline;">
+                <tr  style="font-weight: bold; background-color: #d1d5db;">
                     <td colspan="5" style="text-align: right;">Total</td>
                     <td style="text-align: right;">{{ data.get('totals').get('amount') }}</td>
                     <td style="text-align: right;">{{ data.get('totals').get('quantity') }}</td>
