--- a/backend/journals/utils/templates/single_service_income.html
+++ b/backend/journals/utils/templates/single_service_income.html
@@ -80,12 +80,15 @@
 
                 {% if data.get('details').get('footer_data') %}
                     {% for key, value in data.get('details').get('footer_data').items() %}
-                    <tr>
+                    <tr
+                    {% if "Total" in key %}
+                    style="font-weight: bold; background-color: #d1d5db;"
+                    {% endif %}           
+                     >
                         <td style="text-align: right;" colspan="4">
                             {% if key == "Amount Due" %}
                                 <strong style="text-decoration: underline; color: red;">{{ key }}</strong>
-                            {% elif "Total" in key %}
-                                <span style="text-decoration: underline;;">{{ key }}</span>
+                            
                             {% else %}
                                 {{ key }}
                             {% endif %}
@@ -94,7 +97,7 @@
                             {% if key == "Amount Due" %}
                                 <strong style="color: red; text-decoration: underline;">{{ value }}</strong>
                             {% elif "Total" in key %}
-                                <strong style="text-decoration: underline;">{{ value }}</strong>
+                                <strong >{{ value }}</strong>
                             {% else %}
                                 {{ value }}
                             {% endif %}
