--- a/backend/journals/utils/templates/stocks.html
+++ b/backend/journals/utils/templates/stocks.html
@@ -65,8 +65,9 @@
             <thead>
                 <tr>
                     <th>No #</th>
-                    <th>Item Name</th>
-                    <th>Unit Name</th>
+                    <th>Name</th>
+                    <th>Unit name</th>
+                    <th>Unit alias</th>
                     <th>Quantity</th>
                    
                 </tr>
@@ -77,11 +78,13 @@
                     <td>{{ loop.index }}</td>
                     <td>{{ stock.get('name') }}</td>
                     <td>{{ stock.get('unit_name') }}</td>
+                    <td>{{ stock.get('unit_alias') }}</td>
+
                     <td style="text-align: right;">{{ stock.get('total_quantity') }} {{ stock.get('unit_alias') }}</td>
                 </tr>
                 {% endfor %}
-                <tr style="font-weight: bold;text-decoration: underline;">
-                    <td colspan="3" style="text-align: right;" >Total</td>
+                <tr  style="font-weight: bold; background-color: #d1d5db;">
+                    <td colspan="4" style="text-align: right;" >Total</td>
                     <td style="text-align: right;">{{ data.get('totals').get('quantity') }}</td>
                 </tr>
             </tbody>
